--- a/Backup/Backup/Backup.csproj
+++ b/Backup/Backup/Backup.csproj
@@ -35,7 +35,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Program.cs" />
+    <Compile Include="Backup.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Serpent\SerpentEngine.cs" />
     <Compile Include="Serpent\SerpentTest.cs" />
