handle google rate limit exceeded error; add program icon; fix auth command line bug

--- a/Backup/RemoteDriveAuth/RemoteDriveAuth.csproj
+++ b/Backup/RemoteDriveAuth/RemoteDriveAuth.csproj
@@ -11,6 +11,8 @@
     <AssemblyName>RemoteDriveAuth</AssemblyName>
     <SignAssembly>true</SignAssembly>
     <AssemblyOriginatorKeyFile>Keyfile.snk</AssemblyOriginatorKeyFile>
+    <ApplicationIcon>
+    </ApplicationIcon>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -39,6 +41,11 @@
     <Compile Include="..\Backup\ProtectedDataStorage.cs" />
     <Compile Include="..\Backup\ParseJSON.cs" />
     <Compile Include="..\Backup\HexUtility.cs" />
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
     <Compile Include="RemoteDriveAuth.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -46,6 +53,16 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Keyfile.snk" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Properties\Resources.resx">
+      <SubType>Designer</SubType>
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Icon1.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
