--- a/FileUtilityTester/FileUtilityTester/FileUtilityTester.csproj
+++ b/FileUtilityTester/FileUtilityTester/FileUtilityTester.csproj
@@ -33,8 +33,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\..\Backup\Backup\HexUtility.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="..\..\Backup\Backup\ProtectedDataStorage.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="COPYING.txt" />
