add a measure of robustness and restartability to 'sync' feature; validated with some fault-injection testing

--- a/BackupTester/Tests/Tests.csproj
+++ b/BackupTester/Tests/Tests.csproj
@@ -68,6 +68,7 @@
     <Content Include="SplitBasic.txt" />
     <Content Include="SyncBasic.txt" />
     <Content Include="SyncExclusions.txt" />
+    <Content Include="SyncFaults.txt" />
     <Content Include="SyncLogging.txt" />
     <Content Include="TestScripts.txt" />
     <Content Include="RemoteBasic.txt" />
