--- a/Backup/Backup/Backup.csproj
+++ b/Backup/Backup/Backup.csproj
@@ -43,6 +43,11 @@
     <Compile Include="HexUtility.cs" />
     <Compile Include="IArchiveFileManager.cs" />
     <Compile Include="Backup.cs" />
+    <Compile Include="Keccak\Arrays.cs" />
+    <Compile Include="Keccak\IDigest.cs" />
+    <Compile Include="Keccak\IMemoable.cs" />
+    <Compile Include="Keccak\Keccak.cs" />
+    <Compile Include="Keccak\SHA3Digest.cs" />
     <Compile Include="ParseJSON.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ProtectedDataStorage.cs" />
@@ -68,6 +73,14 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="COPYING.txt" />
+    <Content Include="Keccak\ShortMsgKAT_SHA3-224.txt">
+    </Content>
+    <Content Include="Keccak\ShortMsgKAT_SHA3-256.txt">
+    </Content>
+    <Content Include="Keccak\ShortMsgKAT_SHA3-384.txt">
+    </Content>
+    <Content Include="Keccak\ShortMsgKAT_SHA3-512.txt">
+    </Content>
     <Content Include="Serpent\Serpent-128-128.verified.test-vectors.txt">
     </Content>
     <Content Include="Serpent\Serpent-192-128.verified.test-vectors.txt">
