add dynpack option -ignoreunchanged that adds a sha3 hash to manifest to permit files with changed timestamps but unchanged data to not make segment dirty

--- a/BackupTester/Tests/Tests.csproj
+++ b/BackupTester/Tests/Tests.csproj
@@ -52,6 +52,7 @@
     <Content Include="DirBasic.txt" />
     <Content Include="DynpackBasic.txt" />
     <Content Include="DynpackExclusions.txt" />
+    <Content Include="DynpackIgnoreUnchanged.txt" />
     <Content Include="DynpackLargeFileSplitting.txt" />
     <Content Include="DynpackLogging.txt" />
     <Content Include="DynpackRangeFaults.txt" />
