Factor http code to separate file, add [disabled, insufficient] initial attempt at certificate pinning, improve task/thread logging

--- a/Backup/Backup/Backup.csproj
+++ b/Backup/Backup/Backup.csproj
@@ -41,6 +41,7 @@
     <Compile Include="Cryptography.cs" />
     <Compile Include="Diagnostics.cs" />
     <Compile Include="HexUtility.cs" />
+    <Compile Include="Http.cs" />
     <Compile Include="IArchiveFileManager.cs" />
     <Compile Include="Backup.cs" />
     <Compile Include="Keccak\Arrays.cs" />
