Add local signature option for dynpack, dynunpack, and valdynpack. Add test cases

--- a/BackupTester/Tests/Tests.csproj
+++ b/BackupTester/Tests/Tests.csproj
@@ -54,6 +54,7 @@
     <Content Include="DynpackExclusions.txt" />
     <Content Include="DynpackIgnoreUnchanged.txt" />
     <Content Include="DynpackLargeFileSplitting.txt" />
+    <Content Include="DynpackLocalSignature.txt" />
     <Content Include="DynpackLogging.txt" />
     <Content Include="DynpackRangeFaults.txt" />
     <Content Include="DynpackTransactionality.txt" />
