fix sync bug (rename case-change only of directory resulted in directory being emptied out on both sides); add tests

--- a/BackupTester/Tests/Tests.csproj
+++ b/BackupTester/Tests/Tests.csproj
@@ -65,6 +65,8 @@
     <Content Include="RemoteFaults.txt" />
     <Content Include="RemoteGoogleDrive.txt" />
     <Content Include="RemoteMicrosoftOneDrive.txt" />
+    <Content Include="resources\cats\DSCF0005.JPG" />
+    <Content Include="resources\cats\DSCF0007.JPG" />
     <Content Include="resources\GoogleDriveRefreshToken.txt" />
     <Content Include="resources\MicrosoftOneDriveRefreshToken.txt" />
     <Content Include="RestoreBasic.txt" />
