--- a/FileUtilityTester/FileUtilityTester/FileUtilityTester.csproj
+++ b/FileUtilityTester/FileUtilityTester/FileUtilityTester.csproj
@@ -34,6 +34,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="..\..\Backup\Backup\HexUtility.cs" />
+    <Compile Include="..\..\Backup\Backup\Concurrency.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="..\..\Backup\Backup\ProtectedDataStorage.cs" />
