--- a/Backup/Backup/Backup.csproj
+++ b/Backup/Backup/Backup.csproj
@@ -52,6 +52,7 @@
     <Compile Include="Keccak\SHA3Digest.cs" />
     <Compile Include="CertificatePinning-Google.cs" />
     <Compile Include="CertificatePinning.cs" />
+    <Compile Include="MyApplicationException.cs" />
     <Compile Include="ParseJSON.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ProtectedDataStorage.cs" />
