--- a/Backup/RemoteDriveAuth/RemoteDriveAuth.csproj
+++ b/Backup/RemoteDriveAuth/RemoteDriveAuth.csproj
@@ -46,6 +46,7 @@
     <Compile Include="..\Backup\Diagnostics.cs" />
     <Compile Include="..\Backup\CertificatePinning-Google.cs" />
     <Compile Include="..\Backup\CertificatePinning.cs" />
+    <Compile Include="..\Backup\MyApplicationException.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
